--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ body {
 
 #title {
     /* font-family: 'Neonderthaw', cursive; */
-    font-family: 'Charmonman', cursive;
+    /* font-family: 'Charmonman', cursive; */
     /* font-family: 'Homemade Apple', cursive; */
 }
 
@@ -63,4 +63,17 @@ body {
     img{
         object-fit: cover;
     }
+}
+
+#mCard {
+    margin-left: 0.5%;
+    padding: 1%;
+    border-radius: 15px;
+    border: solid;
+    border-width: thin;
+
+    width: 30%;
+
+    background-color: #90d5ec;
+    background-image: linear-gradient(315deg, #90d5ec 0%, #fc575e 74%);
 }
