--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,7 @@ background-color: #36f1cd;
 }
 
 #card {
+    margin-right: 0.5%;
     padding: 1%;
     border-radius: 15px;
     border: solid;
@@ -90,6 +91,6 @@ background-color: #36f1cd;
 
     width: 30%;
 
-    background-color: #90d5ec;
-    background-image: linear-gradient(315deg, #90d5ec 0%, #fc575e 74%);
+    background-color: #13c4a3;
+    
 }
