--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,14 @@ body {
 
 #title {
     padding: 0.5%;
+    /* font-family: 'Neonderthaw', cursive; */
+    /* font-family: 'Charmonman', cursive; */
+    /* font-family: 'Homemade Apple', cursive; */
+}
+
+#movieTitle {
+    padding: 0.5%;
+
 }
 
 #card {
@@ -45,13 +53,6 @@ body {
 
     background-color: #90d5ec;
     background-image: linear-gradient(315deg, #90d5ec 0%, #fc575e 74%);
-}
-
-
-#title {
-    /* font-family: 'Neonderthaw', cursive; */
-    /* font-family: 'Charmonman', cursive; */
-    /* font-family: 'Homemade Apple', cursive; */
 }
 
 
@@ -77,3 +78,24 @@ body {
     background-color: #90d5ec;
     background-image: linear-gradient(315deg, #90d5ec 0%, #fc575e 74%);
 }
+
+#guessCard {
+    margin-left: 0.5%;
+    padding: 1%;
+    border-radius: 15px;
+    border: solid;
+    border-width: thin;
+
+    width: 30%;
+
+    background-color: #90d5ec;
+    background-image: linear-gradient(315deg, #90d5ec 0%, #fc575e 74%);
+}
+
+#ageGuess {
+    display: block;
+    margin-left: 35%;
+
+
+}
+
