--- a/assets/css/loader.css
+++ b/assets/css/loader.css
@@ -1,59 +1,27 @@
-/* These loaders were borrowed from codepan.io */
-
-/* loader animation styles total 9 */
-.loader {
+.cssLoader {
 	--color: white;
 	--size-mid: 6vmin;
 	--size-dot: 1.5vmin;
 	--size-bar: 0.4vmin;
 	--size-square: 3vmin;
-	
-	display: block;
-	position: relative;
+    padding-right:25px;
+    padding-bottom: 20px;
 	width: 50%;
-	display: grid;
-	place-items: center;
+
 }
 
-.loader::before,
-.loader::after {
+.cssLoader::before,
+.cssLoader::after {
 	content: '';
 	box-sizing: border-box;
 	position: absolute;
 }
 
 /**
-	loader --1
-**/
-.loader.--1::before {
-	width: var(--size-mid);
-	height: var(--size-mid);
-	border: 4px solid var(--color);
-	border-top-color: transparent;
-	border-radius: 50%;
-	animation: loader-1 1s linear infinite;
-}
-
-.loader.--1::after {
-	width: calc(var(--size-mid) - 2px);
-	height: calc(var(--size-mid) - 2px);
-	border: 2px solid transparent;
-	border-top-color: var(--color);
-	border-radius: 50%;
-	animation: loader-1 0.6s linear reverse infinite;
-}
-
-@keyframes loader-1 {
-	100% {
-		transform: rotate(1turn);
-	}
-}
-
-/**
 	loader --2
 **/
-.loader.--2::before,
-.loader.--2::after {
+.cssLoader.--2::before,
+.cssLoader.--2::after {
 	width: var(--size-dot);
 	height: var(--size-dot);
 	background-color: var(--color);
@@ -62,7 +30,7 @@
 	animation: loader-2 0.8s cubic-bezier(0.2, 0.32, 0, 0.87) infinite;
 }
 
-.loader.--2::after {
+.cssLoader.--2::after {
 	animation-delay: 0.3s;
 }
 
@@ -87,8 +55,8 @@
 /**
 	loader --3
 **/
-.loader.--3::before,
-.loader.--3::after {
+.cssLoader.--3::before,
+.cssLoader.--3::after {
 	width: var(--size-dot);
 	height: var(--size-dot);
 	background-color: var(--color);
@@ -96,11 +64,11 @@
 	animation: loader-3 1.2s ease-in-out infinite;
 }
 
-.loader.--3::before {
+.cssLoader.--3::before {
 	left: calc(50% - 1.6vmin - var(--size-dot));
 }
 
-.loader.--3::after {
+.cssLoader.--3::after {
 	left: calc(50% + 1.6vmin);
 	animation-delay: -0.4s;
 }
@@ -118,7 +86,7 @@
 /**
 	loader --4
 **/
-.loader.--4::before {
+.cssLoader.--4::before {
 	height: var(--size-bar);
 	width: 6vmin;
 	background-color: var(--color);
@@ -144,22 +112,22 @@
 }
 
 /**
-	loader --5
+	cssLoader --5
 **/
-.loader.--5::before,
-.loader.--5::after {
+.cssLoader.--5::before,
+.cssLoader.--5::after {
 	height: 3vmin;
 	width: var(--size-bar);
 	background-color: var(--color);
 	animation: loader-5 0.6s cubic-bezier(0, 0, 0.03, 0.9) infinite;
 }
 
-.loader.--5::before {
+.cssLoader.--5::before {
 	left: calc(50% - 1vmin);
 	top: calc(50% - 3vmin);
 }
 
-.loader.--5::after {
+.cssLoader.--5::after {
 	left: calc(50% + 1vmin);
 	top: calc(50% - 1vmin);
 	animation-delay: 0.2s;
@@ -186,7 +154,7 @@
 /**
 	loader --6
 **/
-.loader.--6::before {
+.cssLoader.--6::before {
 	width: var(--size-square);
 	height: var(--size-square);
 	background-color: var(--color);
@@ -214,22 +182,22 @@
 }
 
 /**
-	loader --7
+	cssLoader --7
 **/
-.loader.--7::before,
-.loader.--7::after {
+.cssLoader.--7::before,
+.cssLoader.--7::after {
 	width: var(--size-square);
 	height: var(--size-square);
 	background-color: var(--color);
 }
 
-.loader.--7::before {
+.cssLoader.--7::before {
 	top: calc(50% - var(--size-square));
 	left: calc(50% - var(--size-square));
 	animation: loader-6 2.4s cubic-bezier(0, 0, 0.24, 1.21) infinite;
 }
 
-.loader.--7::after {
+.cssLoader.--7::after {
 	top: 50%;
 	left: 50%;
 	animation: loader-7 2.4s cubic-bezier(0, 0, 0.24, 1.21) infinite;
@@ -256,20 +224,20 @@
 /**
 	loader --8
 **/
-.loader.--8::before,
-.loader.--8::after {
+.cssLoader.--8::before,
+.cssLoader.--8::after {
 	width: var(--size-dot);
 	height: var(--size-dot);
 	border-radius: 50%;
 	background-color: var(--color);
 }
 
-.loader.--8::before {
+.cssLoader.--8::before {
 	top: calc(50% + 4vmin);
 	animation: loader-8-1 0.8s cubic-bezier(0.06, 0.01, 0.49, 1.18) infinite;
 }
 
-.loader.--8::after {
+.cssLoader.--8::after {
 	opacity: 0;
 	top: calc(50% - 2vmin);
 	animation: loader-8-2 0.8s cubic-bezier(0.46,-0.1, 0.27, 1.07) 0.2s infinite;
@@ -314,8 +282,8 @@
 /**
 	loader --9
 **/
-.loader.--9::before,
-.loader.--9::after {
+.cssLoader.--9::before,
+.cssLoader.--9::after {
 	width: var(--size-dot);
 	height: var(--size-dot);
 	border-radius: 50%;
@@ -323,11 +291,11 @@
 	animation: loader-9 0.42s cubic-bezier(0.39, 0.31, 0, 1.11) infinite;
 }
 
-.loader.--9::before {
+.cssLoader.--9::before {
 	left: calc(50% - var(--size-dot) - 1.6vmin);
 }
 
-.loader.--9::after {
+.cssLoader.--9::after {
 	left: calc(50% + 1.6vmin);
 	animation-delay: 0.12s;
 }
