--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,23 +24,39 @@ background-color: #36f1cd;
     justify-content: center;
     align-items: center;
 }
-
-.wrapper {
-    padding: 1%;
-    text-align: center;
-
-    display: flex;
-    align-items: center;
+.mainContainer {
+    display:flex;
     justify-content: center;
 }
+.wrapper {
+    flex-wrap: wrap;
+    max-width: 30%;
+    min-width: 25%;
+    padding: 1%;
+    text-align: center;
+    
+}
 
+#card {
+    box-shadow: 0 0 10px 3px #48d8e0;
+    min-height: 100%;
+    margin-right: 0.5%;
+    padding: 2.5%;
+    border-radius: 15px;
+    border: solid;
+    border-width: thin;
+    background-color: #13c4a3;
+    ;
+}
 .btn_wrapper {
     display: block;
     text-align: center;
 }
 
 #start {
-    background-color: #39A0ED;
+    margin: 2%;
+    background-color: #cf77a4;
+    box-shadow: 0 0 10px 5px #e048b2;
 }
 
 #icon {
@@ -70,21 +86,6 @@ background-color: #36f1cd;
 
 }
 
-#card {
-    margin-right: 0.5%;
-    padding: 1%;
-    border-radius: 15px;
-    border: solid;
-    border-width: thin;
-
-    width: 30%;
-
-    background-color: #13c4a3;
-    ;
-}
-
-
-
 
 .selectMenu {
     display:block;
@@ -95,4 +96,22 @@ background-color: #36f1cd;
     text-align: left;;
 }
 
+footer {
+    padding-top: 2%;
+    padding-bottom: 2%;
+    text-align: center;
+    color: #13c4a3;
+}
 
+footer h1 {
+    padding: 1%;
+}
+
+.customHR {
+    margin: 0;
+    background-color: #13c4a3;
+}
+
+.footerH1 {
+    display: inline;
+}
